fix minor alignment setting in setting

--- a/public/app/setting/fatugue_driving_time.html
+++ b/public/app/setting/fatugue_driving_time.html
@@ -11,8 +11,10 @@
                 <input id="maximum" type="number" maxlength="2">
             </div>
         </div>
-        <a class="btn">Send</a>
+        <div class="col s12 m12 l12">
+            <a class="btn">Send</a>
+        </div>
     </div>
-    <i class="fa fa-exclamation-triangle"></i><p>Operation Tips:<br/>
+    <p><i class="fa fa-exclamation-triangle fa-2x" style="margin-right:2%"></i><b style="font-size:120%">Operation Tips:</b></p>
     When the ACC is ON longer than the time set threshold, the vehicle driving machines take the initiative, made a fatigue alarm information. If set to 0 to not fatigue driving alarm.
 </div>
