--- a/public/app/setting/interval.html
+++ b/public/app/setting/interval.html
@@ -14,6 +14,9 @@
                 </div>
             </div>
         </div>
-        <a class="btn">Send</a>
+
+        <div class="col s12 m12 l12">
+            <a class="btn">Send</a>
+        </div>
     </div>
 </div>
