--- a/public/app/setting/timezone.html
+++ b/public/app/setting/timezone.html
@@ -3,11 +3,11 @@
     <div class="row">
         <p>please set difference value based on GMT:</p>
         <div class="col s12 m12 l12">
-            <div class="col s12 m12 l6">
+            <div class="col s12 m12 l3 offset-l3">
                 <label for="hour" class="active">Hour</label>
                 <input id="hour" type="number" maxlength="2">
             </div>
-            <div class="col s12 m12 l6">
+            <div class="col s12 m12 l3">
                 <label for="minute" class="active">Minute</label>
                 <input id="minute" type="number" maxlength="2">
             </div>
@@ -26,6 +26,9 @@
                 </div>
             </form>
         </div>
-        <a class="btn">Send</a>
+
+        <div class="col s12 m12 l12">
+            <a class="btn">Send</a>
+        </div>
     </div>
 </div>
