--- a/public/app/setting/yaw_management.html
+++ b/public/app/setting/yaw_management.html
@@ -1,8 +1,8 @@
 <div class="center" style="width:98%;height:auto;padding-left:2%">
     <p class="headerrow">Geo Fence</p>
     <div class="row">
-        <div class="col s12 m12 l4 geofencebd">
-            <p class="geofencehead">Routes</p>
+        <div class="col s12 m12 l4" style="border:1px black solid">
+            <p>Routes</p>
             <div class="col s12 m12 l12 input-field">
                 <input id="areaname" type="text">
                 <label for="areaname" class="active">Route Name</label>
@@ -10,19 +10,18 @@
             <table>
                 <thead>
                     <tr>
-                        <td class="geofencehead">Route Name</td>
+                        <td>Route Name</td>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-
-                    </tr>
+                    <tr><td>Route 1</td></tr>
+                    <tr><td>Route 2</td></tr>
                 </tbody>
             </table>
         </div>
-        <div class="col s12 m12 l8 geofencebd" style="border-left:0px;">
-            <p class="geofencehead">Vehicle</p>
-            <div class="col s12 m12 l12 input-field">
+        <div class="col s12 m12 l8" style="border:1px black solid; border-left:none">
+            <p>Vehicle</p>
+            <div class="col 12 m12 l12 input-field">
                 <input id="plateno" type="text">
                 <label for="plateno" class="active">Plate Number</label>
             </div>
@@ -38,10 +37,22 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td></td>
+                        <td><input type="checkbox" id="#"></td>
+                        <td>ABC 1234</td>
+                        <td>0123456789</td>
+                        <td>01/03/2016</td>
+                        <td>10/03/2016</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" id="#"></td>
+                        <td>ABC 1234</td>
+                        <td>0123456789</td>
+                        <td>01/03/2016</td>
+                        <td>10/03/2016</td>
                     </tr>
                 </tbody>
             </table>
         </div>
+
     </div>
 </div>
