--- a/public/app/setting/yaw_setting.html
+++ b/public/app/setting/yaw_setting.html
@@ -1,14 +1,13 @@
 <div class="row container">
+    <p class="headerrow">Yaw Setting</p>
+
     <div class="col s12 m12 l12">
-        <div class="center">
-            <p>Yaw SEtting</p>
-        </div>
         <div>
-            <p class="col s12 m12 l6">Route Name: <select class="browser-default"><option>1</option><option>2</option></select></p>
-            <p class="col s12 m12 l6">Route Width:<input type="text" style="width:60%">M</p>
+            <p class="col s12 m12 l3">Route Name: <select class="browser-default"><option>1</option><option>2</option></select></p>
+            <p class="col s12 m12 l3 push-l1">Route Width:<input type="text" style="margin-right:2%;width:60%">Meter</p>
         </div>
         <div class="col s12 m12 l12">
-            <p><input type="checkbox" id="enable" style="margin-right:2%"/>Only effect at setting period:</p>
+            <p class="input-field"><input type="checkbox" id="enable" style="margin-right:2%"/>Only effect at setting period:</p>
             <div class="col s12 m12 l12">
                 <div class="col s12 m6 l1">Date:</div>
                 <div class="col s12 m6 l3"><input type="date" class="right"></div>
@@ -24,7 +23,7 @@
                 <p class="col l3"><input type="checkbox" id="friday"><label for="friday">Friday</label></p>
                 <p class="col l3"><input type="checkbox" id="saturday"><label for="saturday">Sunday</label></p>
             </div>
-            <div class="col s12 m12 l12">
+            <div class="col s12 m12 l12" style="margin-top:4%">
                 <div class="l12"><input type="checkbox" id="time"><label for="time">Time</label></div>
                 <div class="col s12 m12 l3">
                     <div class="l2"><label for="fromtime">From</label></div>
