--- a/public/app/setting/geo_fence.html
+++ b/public/app/setting/geo_fence.html
@@ -1,15 +1,15 @@
 <div class="center" style="width:98%;height:auto;padding-left:2%">
     <p class="headerrow">Geo Fence</p>
     <div class="row">
-        <div class="col s12 m12 l4 geofencebd">
-            <p class="geofencehead">Area</p>
+        <div class="col s12 m12 l4">
+            <p>Area</p>
             <div class="col s12 m12 l12 input-field">
                 <input id="areaname" type="text">
                 <label for="areaname" class="active">Area Name</label>
             </div>
         </div>
-        <div class="col s12 m12 l8 geofencebd" style="border-left:0px;">
-            <p class="geofencehead">Vehicle</p>
+        <div class="col s12 m12 l8">
+            <p>Vehicle</p>
             <div class="col s12 m12 l12 input-field">
                 <input id="plateno" type="text">
                 <label for="plateno" class="active">Plate Number</label>
