--- a/public/app/setting/speed_threshold.html
+++ b/public/app/setting/speed_threshold.html
@@ -2,13 +2,16 @@
     <p class="headerrow">Speed Threshold</p>
     <div class="row">
         <div class="col s12 m12 l6 offset-l3">
-            <div class="col s12 m12 l9">Speed threshold (0-255 km/h)</div>
-            <div class="col s12 m12 l3"><input id="speed" type="number" min="0" maxlength="3">
+            <div class="col s12 m12 l12">Speed threshold (0-255 km/h)</div>
+            <div class="col s12 m12 l4 push-l4"><input id="speed" type="number" min="0" maxlength="3">
                 <label for="speed" class="active"></label>
             </div>
         </div>
-        <a class="btn">Send</a>
+
+        <div class="col s12 m12 l12">
+            <a class="btn">Send</a>
+        </div>
     </div>
-    <i class="fa fa-exclamation-triangle"></i><p>Operation Tips:<br/>
+    <p><i class="fa fa-exclamation-triangle fa-2x" style="margin-right:2%"></i><b style="font-size:120%">Operation Tips:</b><br/>
     When the speed exceeds a set speed threshold when the machine take the initiative, made a speeding car alarm information. If set to 0 to not create excessive speed alarm.</p>
 </div>
