--- a/public/app/setting/temperature.html
+++ b/public/app/setting/temperature.html
@@ -2,15 +2,18 @@
     <p class="headerrow">Temperature</p>
     <div class="row">
         <div class="col s12 m12 l12">
-            <div class="col s12 m12 l3 offset-l3 input-field">
+            <div class="col s12 m12 l3 push-l3 input-field">
                 <label for="minimum">Minumum ( ℃ )</label>
                 <input id="minimum" type="number" maxlength="2">
             </div>
-            <div class="col s12 m12 l3 input-field">
+            <div class="col s12 m12 l3 push-l3 input-field">
                 <label for="maximum">Maximum ( ℃ )</label>
                 <input id="maximum" type="number" maxlength="2">
             </div>
         </div>
-        <a class="btn">Send</a>
+
+        <div class="col s12 m12 l12">
+            <a class="btn">Send</a>
+        </div>
     </div>
 </div>
