Able to send message

--- a/public/app/home/forgot_password.html
+++ b/public/app/home/forgot_password.html
@@ -1,8 +1,15 @@
 <div id="resetpassword" class="modal center">
     <p class="headerrow">Reset Password</p>
-    <p>Please enter your cloudtruck email in the textbox to receive new password</p>
-    <div class="row"  id="forget_password" class="modal">
-        <p class="col s12 m12 l12"><input type="text" id="email" placeholder="abcd1234@cloudtruck.com" style="width:60%"></p>
-        <a class="btn waves-light">Send</a>
+    <p>Please enter your cloudtruck username in the textbox to receive new password</p>
+    <div class="row" class="modal">
+        <div class="row">
+            <div class="input-field col l6 push-l3">
+                <input type="text" id="email" ng-model="username">
+                <label for="email">username</label>
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn waves-light" ng-click="vm.forget_password(username)">Send</button>
+        </div>
     </div>
 </div>
