setup reset password redirection

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         <script src="app/app.run.js"></script>
         <script src="app/home/home.js"></script>
         <script src="app/home/navigation.js"></script>
+        <script src="app/home/reset_password.js"></script>
         <script src="app/dashboard/dashboard.js"></script>
         <script src="app/dashboard/home.js"></script>
         <script src="app/dashboard/vehicle_tracking.js"></script>
