Foret password function completed MVP

--- a/public/app/home/forgot_password.html
+++ b/public/app/home/forgot_password.html
@@ -1,6 +1,6 @@
 <div id="resetpassword" class="modal center">
     <p class="headerrow">Reset Password</p>
-    <p>Please enter your cloudtruck username in the textbox to receive new password</p>
+    <p>Please enter your cloudtruck username in the textbox to reset password</p>
     <div class="row" class="modal">
         <div class="row">
             <div class="input-field col l6 push-l3">
@@ -9,7 +9,20 @@
             </div>
         </div>
         <div class="row">
-            <button class="btn waves-light" ng-click="vm.forget_password(username)">Send</button>
+            <button ng-if="!vm.load" class="btn waves-light" ng-click="vm.forget_password(username)">Send</button>
+            <div class="preloader-wrapper big active" ng-if="vm.load">
+                <div class="spinner-layer spinner-blue-only">
+                    <div class="circle-clipper left">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="gap-patch">
+                        <div class="circle"></div>
+                    </div>
+                    <div class="circle-clipper right">
+                        <div class="circle"></div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
