Ui for multiple tracking

--- a/public/app/dashboard/vehicle_tracking.html
+++ b/public/app/dashboard/vehicle_tracking.html
@@ -1,1 +1,84 @@
-<h1 class="">Coming Soon!</h1> 
+<div class="row">
+    <div class="col s12 m12 l12">
+        <div class="col s12 m12 l6">
+            <div id="map_home" style="height: calc(50vh - 88px);"></div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>SHSJB</option>
+                    <option>SHSPG</option>
+                    <option>SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>Trucks from SHSJB</option>
+                    <option>Trucks from SHSPG</option>
+                    <option>Trucks from SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <a class="btn">Search</a>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div id="map_home" style="height: calc(50vh - 88px);"></div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>SHSJB</option>
+                    <option>SHSPG</option>
+                    <option>SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>Trucks from SHSJB</option>
+                    <option>Trucks from SHSPG</option>
+                    <option>Trucks from SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <a class="btn">Search</a>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div id="map_home" style="height: calc(50vh - 88px);"></div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>SHSJB</option>
+                    <option>SHSPG</option>
+                    <option>SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>Trucks from SHSJB</option>
+                    <option>Trucks from SHSPG</option>
+                    <option>Trucks from SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <a class="btn">Search</a>
+            </div>
+        </div>
+        <div class="col s12 m12 l6">
+            <div id="map_home" style="height: calc(50vh - 88px);"></div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>SHSJB</option>
+                    <option>SHSPG</option>
+                    <option>SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <select class="browser-default">
+                    <option>Trucks from SHSJB</option>
+                    <option>Trucks from SHSPG</option>
+                    <option>Trucks from SHSKL</option>
+                </select>
+            </div>
+            <div class="col s12 m12 l4">
+                <a class="btn">Search</a>
+            </div>
+        </div>
+    </div>
+</div>
