--- a/public/app/dashboard/vehicle_tracking.html
+++ b/public/app/dashboard/vehicle_tracking.html
@@ -1,7 +1,7 @@
-<div class="row">
+<div class="row" style="margin-bottom:0px">
     <div class="col s12 m12 l12">
-        <div class="col s12 m12 l6">
-            <div id="map_home" style="height: calc(50vh - 88px);"></div>
+        <div class="col s12 m12 l6" ng-repeat="i in vm.get_number(vm.number_of_views) track by $index">
+            <div id="map_home{{$index}}" style="height: calc(50vh - 109px);"></div>
             <div class="col s12 m12 l4">
                 <select class="browser-default">
                     <option>SHSJB</option>
@@ -11,73 +11,12 @@
             </div>
             <div class="col s12 m12 l4">
                 <select class="browser-default">
-                    <option>Trucks from SHSJB</option>
-                    <option>Trucks from SHSPG</option>
-                    <option>Trucks from SHSKL</option>
+                    <option>ABC 123</option>
+                    <option>DEF 456</option>
                 </select>
             </div>
-            <div class="col s12 m12 l4">
-                <a class="btn">Search</a>
-            </div>
-        </div>
-        <div class="col s12 m12 l6">
-            <div id="map_home" style="height: calc(50vh - 88px);"></div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>SHSJB</option>
-                    <option>SHSPG</option>
-                    <option>SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>Trucks from SHSJB</option>
-                    <option>Trucks from SHSPG</option>
-                    <option>Trucks from SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <a class="btn">Search</a>
-            </div>
-        </div>
-        <div class="col s12 m12 l6">
-            <div id="map_home" style="height: calc(50vh - 88px);"></div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>SHSJB</option>
-                    <option>SHSPG</option>
-                    <option>SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>Trucks from SHSJB</option>
-                    <option>Trucks from SHSPG</option>
-                    <option>Trucks from SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <a class="btn">Search</a>
-            </div>
-        </div>
-        <div class="col s12 m12 l6">
-            <div id="map_home" style="height: calc(50vh - 88px);"></div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>SHSJB</option>
-                    <option>SHSPG</option>
-                    <option>SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <select class="browser-default">
-                    <option>Trucks from SHSJB</option>
-                    <option>Trucks from SHSPG</option>
-                    <option>Trucks from SHSKL</option>
-                </select>
-            </div>
-            <div class="col s12 m12 l4">
-                <a class="btn">Search</a>
+            <div class="col s12 m12 l4 ">
+                <a class="btn right">Search</a>
             </div>
         </div>
     </div>
