--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,8 @@
     </head>
     <body ng-app="app" ng-controller="NavigationController as vm"  ng-cloak>
         <ul id="user_setting" class="dropdown-content">
-            <li><a href="#profile" class="modal-trigger">Profile</a></li>
-            <li><a href="#password" class="modal-trigger" >Password</a></li>
+            <li><a href="#profile" ng-click="vm.open_modal('profile')">Profile</a></li>
+            <li><a href="#password" ng-click="vm.open_modal('password')">Password</a></li>
             <li><a href="" >View</a></li>
         </ul>
         <div class="navbar-fixed" style="z-index: 999;" ng-if="user && user_type === 0">
