--- a/public/app/dashboard/home.html
+++ b/public/app/dashboard/home.html
@@ -52,9 +52,9 @@
 
     <div class="col s12 m12 l12" id="carmapping">
         <div class="row">
-            <div class="col s12 m12 l4 flow-text" >
-                <h3 style="font-weight:300;">Vehicle Details</h3>
-                <div class="row" style="font-size:20px;">
+            <div class="col s12 m12 l4">
+                <h5>Vehicle Details</h5>
+                <div class="row" style="font-size:100%;">
                     <div class="row">
                         <div class="col s3">FLEET</div>
                         <div class="col s1">:</div>
@@ -66,7 +66,7 @@
                         <div class="col s8"><b>PLJ 8268</b></div>
                     </div>
                     <div class="row">
-                        <div class="col s3">Driver NAME</div>
+                        <div class="col s3">DRIVER</div>
                         <div class="col s1">:</div>
                         <div class="col s8"><b>Gene Lim</b></div>
                     </div>
@@ -81,37 +81,38 @@
                         <div class="col s8"><b>SPICE Arena, Bayan Lepas, Malaysia</b></div>
                     </div>
                 </div>
+
                 <div class="row">
-                    <h3 style="font-weight:300;">Tyre Details</h2>
+                    <h5>Tyre Details</h5>
                     <div class="col l4">
                         <div class="row center" style="position:relative;">
                             <div>23</div>
-                            <img src="/assets/image/tyre_green.png" style="height:64px"/>
+                            <img src="/assets/image/tyre_green.png" style="height:50px"/>
                         </div>
                         <div class="row center" style="position:relative;">
                             <div>24</div>
-                            <img src="/assets/image/tyre_green.png" style="height:64px"/>                            
+                            <img src="/assets/image/tyre_green.png" style="height:50px"/>
                         </div>
                     </div>     
                     <div class="col s4">
                         <div class="row">
                             <div class="col s6 center" style="position:relative;">
                                 <div>21</div>
-                                <img src="/assets/image/tyre_green.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_green.png" style="height:50px"/>
                             </div>
                             <div class="col s6 center" style="position:relative;">
                                 <div>23</div>
-                                <img src="/assets/image/tyre_green.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_green.png" style="height:50px"/>
                             </div>                       
                         </div>
                         <div class="row">
                             <div class="col s6 center" style="position:relative;">
                                 <div>18</div>
-                                <img src="/assets/image/tyre_blue.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_blue.png" style="height:50px"/>
                             </div>
                             <div class="col s6 center" style="position:relative;">
                                 <div>23</div>
-                                <img src="/assets/image/tyre_green.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_green.png" style="height:50px"/>
                             </div>                           
                         </div>
                     </div>     
@@ -119,24 +120,24 @@
                         <div class="row">
                             <div class="col s6 center" style="position:relative;">
                                 <div>31</div>
-                                <img src="/assets/image/tyre_red.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_red.png" style="height:50px"/>
                             </div>
                             <div class="col s6 center" style="position:relative;">
                                 <div>13</div>
-                                <img src="/assets/image/tyre_blue.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_blue.png" style="height:50px"/>
                             </div>               
                         </div>
                         <div class="row">
                             <div class="col s6 center" style="position:relative;">
                                 <div>23</div>
-                                <img src="/assets/image/tyre_green.png" style="height:64px"/>
+                                <img src="/assets/image/tyre_green.png" style="height:50px"/>
                             </div>
                             <div class="col s6 center" style="position:relative;">
                                 <div>19</div>
-                                <img src="/assets/image/tyre_blue.png" style="height:64px"/>
-                            </div>                       
+                                <img src="/assets/image/tyre_blue.png" style="height:50px"/>
+                            </div>
                         </div>
-                    </div>                    
+                    </div>
                 </div>
             </div>
             <div class="col s12 m12 l8" style="height: calc(100vh - 176px);">
