--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -6,6 +6,7 @@
                 <li><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
                 <li><a ui-sref=".settings">Settings</a></li>
                 <li><a ui-sref=".reports">Reports</a></li>
+                <li><a ui-sref=".toll">Toll</a></li>
             </ul>
             <ul class="right">
                 <div style="background: #38414c; height:44px; line-heght:44px;" class="search">
