--- a/public/index.html
+++ b/public/index.html
@@ -52,6 +52,7 @@
         <script src="app/dashboard/dashboard.js"></script>
         <script src="app/dashboard/home.js"></script>
         <script src="app/dashboard/vehicle_tracking.js"></script>
+        <script src="app/toll/toll.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
         <script src="app/admin/home.js"></script>
