--- a/public/app/admin/location.html
+++ b/public/app/admin/location.html
@@ -4,13 +4,21 @@
     <div class="modal-content">
         <h4>Modal Header</h4>
         <div class="row">
-            <div class="input-field col s12">
+            <div class="col s6">
+            <label>Browser Select</label>
+                <select class="browser-default" ng-model="vm.marker.type_marker">
+                    <option value="" disabled selected>Choose Location Type</option>
+                    <option value="toll">Toll</option>
+                    <option value="office">Office</option>
+                </select>
+            </div>
+            <div class="input-field col s6">
                 <input id="name" type="text" ng-model="vm.marker.name">
                 <label for="name">Name</label>
             </div>
         </div>
     </div>
     <div class="modal-footer">
-        <a class="modal-action modal-close waves-effect waves-green btn-flat" ng-click="vm.add_marker()">Add</a>
+        <a id="add_marker" class="modal-action modal-close waves-effect waves-green btn-flat btn green lighten-2 white-text" ng-click="vm.add_marker()">Add</a>
     </div>
 </div>
