--- a/public/app/report/alarm_frequency.html
+++ b/public/app/report/alarm_frequency.html
@@ -37,7 +37,7 @@
 
     <div class="col s12 m12 l12 menuseperator">
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Fleet</td>
                 <td>Alarm type</td>
