--- a/public/app/report/alarm_records.html
+++ b/public/app/report/alarm_records.html
@@ -47,7 +47,7 @@
         <p class="col s12 m12 l6 left">Statistical Time:</p>
         <p class="col s12 m12 l6 right">(Current Time)</p>
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Fleet</td>
                 <td>Plate NO</td>
