--- a/public/app/report/driving_records.html
+++ b/public/app/report/driving_records.html
@@ -52,7 +52,7 @@
         <p class="col s12 m12 l4">Average speed:</p>
 
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Date</td>
                 <td>Time</td>
