--- a/public/app/report/geo_fence_statistic.html
+++ b/public/app/report/geo_fence_statistic.html
@@ -48,7 +48,7 @@
         <p class="col s12 m12 l4">Tabulation Time: 2016-03-01 10:13:38</p>
         <div class="col s12 m12 l12">
             <table>
-                <thead>
+                <thead class="tablehead">
                     <tr>
                         <td>Area Name:</td>
                         <td>Plate NO:</td>
