--- a/public/app/report/idle.html
+++ b/public/app/report/idle.html
@@ -59,16 +59,16 @@
             </div>
         </div>
         <table>
-            <thead>
+            <thead class="tablehead">
                 <tr>
-                    <td><b>INDEX</b></td>
-                    <td><b>START DATE TIME</b></td>
-                    <td><b>END DATE TIME</b></td>
-                    <td><b>DURATION OF IDLE</b></td>
-                    <td><b>IDLING(LITRE)</b></td>
-                    <td><b>RM</b></td>
-                    <td><b>POI ADDRESS</b></td>
-                    <td><b>LOCATION</b></td>
+                    <td>INDEX</td>
+                    <td>START DATE TIME</td>
+                    <td>END DATE TIME</td>
+                    <td>DURATION OF IDLE</td>
+                    <td>IDLING(LITRE)</td>
+                    <td>RM</td>
+                    <td>POI ADDRESS</td>
+                    <td>LOCATION</td>
                 </tr>
             </thead>
             <tbody>
