--- a/public/app/report/rf_data.html
+++ b/public/app/report/rf_data.html
@@ -39,15 +39,15 @@
         <p class="col s12 m12 l5">Statistical Time: <b>01-03-2016 00:00:00</b></p>
         <p class="col s12 m12 l5">Tabulation Time: <b>01-03-2016 Current Time</b></p>
         <table>
-            <thead>
+            <thead class="tablehead">
                 <tr>
-                    <td><b>FLEET</b></td>
-                    <td><b>PLATE NO</b></td>
-                    <td><b>CARD ID</b></td>
-                    <td><b>MEMBER ID</b></td>
-                    <td><b>NAME</b></td>
-                    <td><b>TIME</b></td>
-                    <td><b>ADDRESS</b></td>
+                    <td>FLEET</td>
+                    <td>PLATE NO</td>
+                    <td>CARD ID</td>
+                    <td>MEMBER ID</td>
+                    <td>NAME</td>
+                    <td>IME</td>
+                    <td>ADDRESS</td>
                 </tr>
             </thead>
             <tbody>
