--- a/public/app/report/running_trip.html
+++ b/public/app/report/running_trip.html
@@ -35,16 +35,16 @@
         <p class="col s12 m12 l3">Start Time: <b>01-03-2016 00:00:00</b></p>
         <p class="col s12 m12 l3">End Time: <b>01-03-2016 23:59:59</b></p>
         <table>
-            <thead>
+            <thead class="tablehead">
                 <tr>
-                    <td><b>PLATE NO</b></td>
-                    <td><b>START TIME</b></td>
-                    <td><b>START ADDRESS</b></td>
-                    <td><b>REACH TIME</b></td>
-                    <td><b>REACH ADDRESS</b></td>
-                    <td><b>AVERAGE SPEED</b></td>
-                    <td><b>MAXIMUM SPEED</b></td>
-                    <td><b>WARNING</b></td>
+                    <td>PLATE NO</td>
+                    <td>START TIME</td>
+                    <td>START ADDRESS</td>
+                    <td>REACH TIME</td>
+                    <td>REACH ADDRESS</td>
+                    <td>AVERAGE SPEED</td>
+                    <td>MAXIMUM SPEED</td>
+                    <td>WARNING</td>
                 </tr>
             </thead>
             <tbody>
