--- a/public/app/report/trip_event.html
+++ b/public/app/report/trip_event.html
@@ -56,7 +56,7 @@
         <p class="col s12 m12 l4">Statistical Time: </p>
         <p class="col s12 m12 l3">Tabulation TIme: </p>
         <table>
-            <thead>
+            <thead class="tablehead">
                 <tr>
                     <td>FLEET/PLATE NO</td>
                     <td>TRIP INDEX</td>
