--- a/public/app/report/vehicle_mileage.html
+++ b/public/app/report/vehicle_mileage.html
@@ -48,7 +48,7 @@
         <p class="col s12 m12 l6 left">Statistical time:</p>
         <p class="col s12 m12 l6 right">Tabulation time:(Current time)</p>
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Fleet</td>
                 <td>Plate NO</td>
