--- a/public/app/toll/toll.html
+++ b/public/app/toll/toll.html
@@ -1,1 +1,42 @@
-Toll
+<div class="row center">
+    <div class="col s12 m12 l6 push-l3">
+        <table style="border:1px black solid">
+            <thead class="tablehead">
+                <tr>
+                    <td>Plate NO</td>
+                    <td>Toll</td>
+                    <td>Date</td>
+                    <td>Time</td>
+                    <td>Coordinate X</td>
+                    <td>Coordinate Y</td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>ABC 1234</td>
+                    <td>Juru</td>
+                    <td>17/03/2016</td>
+                    <td>10:25:00</td>
+                    <td>1.0294293</td>
+                    <td>2.2049239</td>
+                </tr>
+                <tr>
+                    <td>ABC 1234</td>
+                    <td>Sungai Dua</td>
+                    <td>17/03/2016</td>
+                    <td>11:05:00</td>
+                    <td>1.5626443</td>
+                    <td>2.7879839</td>
+                </tr>
+                <tr>
+                    <td>ABC 1234</td>
+                    <td>Bertam</td>
+                    <td>17/03/2016</td>
+                    <td>11:35:00</td>
+                    <td>3.0294293</td>
+                    <td>5.2049239</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
