--- a/public/app/report/gprs_flow.html
+++ b/public/app/report/gprs_flow.html
@@ -34,7 +34,7 @@
 
     <div class="col s12 m12 l12 menuseperator">
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Plate NO</td>
                 <td>SIM Card</td>
