--- a/public/app/report/operation_log.html
+++ b/public/app/report/operation_log.html
@@ -38,7 +38,7 @@
 
     <div class="col s12 m12 l12 menuseperator">
         <table>
-            <thead>
+            <thead class="tablehead">
             <tr>
                 <td>Username</td>
                 <td>IP</td>
