--- a/public/app/report/status.html
+++ b/public/app/report/status.html
@@ -37,7 +37,7 @@
 
     <div class="col s12 m12 l12">
         <table>
-            <thead>
+            <thead style="background-color:#96A0AC;color:black">
                 <tr>
                     <td><b>PLATE NO</b></td>
                     <td><b>STATUS</b></td>
