--- a/public/app/report/temperature_report.html
+++ b/public/app/report/temperature_report.html
@@ -40,13 +40,13 @@
         <p class="col s12 m12 l2">Number Plate: <b>ABC1234</b></p>
         <p class="col s12 m12 l5">Make Time: <b>01-03-2016 23:59:59</b></p>
         <table>
-            <thead>
+            <thead class="tablehead">
                 <tr>
-                    <td><b>Index</b></td>
-                    <td><b>From Time</b></td>
-                    <td><b>To Time</b></td>
-                    <td><b>Range</b></td>
-                    <td><b>Address</b></td>
+                    <td>Index</td>
+                    <td>From Time</td>
+                    <td>To Time</td>
+                    <td>Range</td>
+                    <td>Address</td>
                 </tr>
             </thead>
             <tbody>
