Some style changes

--- a/public/app/dashboard/dashboard.html
+++ b/public/app/dashboard/dashboard.html
@@ -2,11 +2,11 @@
     <nav style=' height: 44px; line-height: 44px; background: #444d58;' class="adjust-sidenav">
         <div class="nav-wrapper container">
             <ul class="left hide-on-med-and-down">
-                <li><a ui-sref=".home">Dashboard</a></li>
-                <li><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
-                <li><a ui-sref=".settings">Settings</a></li>
-                <li><a ui-sref=".reports">Reports</a></li>
-                <li><a ui-sref=".toll">Toll</a></li>
+                <li class="menu"><a ui-sref=".home">Dashboard</a></li>
+                <li class="menu"><a ui-sref=".vehicle_tracking">Vehicle tracking</a></li>
+                <li class="menu"><a ui-sref=".settings">Settings</a></li>
+                <li class="menu"><a ui-sref=".reports">Reports</a></li>
+                <li class="menu"><a ui-sref=".toll">Toll</a></li>
             </ul>
             <ul class="right">
                 <div style="background: #38414c; height:44px; line-heght:44px;" class="search">
