--- a/public/index.html
+++ b/public/index.html
@@ -55,6 +55,7 @@
         <script src="app/toll/toll.js"></script>
         <script src="app/setting/home.js"></script>
         <script src="app/report/home.js"></script>
+        <script src="app/report/gprs_flow.js"></script>
         <script src="app/admin/home.js"></script>
         <script src="app/admin/users.js"></script>
         <script src="app/admin/location.js"></script>
